--- a/single-price-grid-component/index.html
+++ b/single-price-grid-component/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | Single Price Grid Component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,35 +15,53 @@
   </style>
 </head>
 <body>
-  Join our community
+  <div class="grid">
+<!-- Top part of the GRID -->
+    <section class="grid-container">
 
-  30-day, hassle-free money back guarantee
+      <div class="community">
+        <h2>Join our community</h2>
+        <h3>30-day, hassle-free money back guarantee</h3>
+        <p>
+          Gain access to our full library of tutorials along with expert code reviews. 
+          Perfect for any developers who are serious about honing their skills.    
+        </p>
+      </div> 
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
 
-  Monthly Subscription
+      <div class="subscription">
+        <h3>Monthly Subscription</h3>
+        <div class="subscription__price">
+          <p class="month"><span>&dollar;29</span> per month</p>
+        </div>
+        <p>
+          Full access for less than &dollar;1 a day
+        </p>
+        <div class="button">
+          <a href="#">Sign Up</a>
+        </div>
+      </div>
 
-  &dollar;29 per month
+      <div class="why">
+        <h3>Why Us</h3>
+        <ul>
+          <li>Tutorials by industry experts</li>
+          <li>Peer &amp; expert code review</li>
+          <li>Coding exercises</li>
+          <li>Access to our GitHub repos</li>
+          <li>Community forum</li>
+          <li>Flashcard decks</li>
+          <li>New videos every week</li>
+        </ul>
+      </div>
+    </section>
 
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
+</div>
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Tim Eif</a>.
     </p>
   </footer>
 </body>
